ADAK Update: Neue Areas

--- a/mod/utc/naeressa.utc.yml
+++ b/mod/utc/naeressa.utc.yml
@@ -1,7 +1,7 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Head: {type: :byte, value: 2}
+Appearance_Head: {type: :byte, value: 1}
 Appearance_Type: {type: :word, value: 4}
 ArmorPart_RFoot: {type: :byte, value: 1}
 BodyBag: {type: :byte, value: 0}
@@ -202,7 +202,7 @@ Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: shia_r_blsi}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: cloth_grandtutor}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 512, EquippedRes: {type: :resref, value: nw_it_mneck022}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 8192, EquippedRes: {type: :resref, value: nw_wambo001}}
 FactionID: {type: :word, value: 2}
@@ -329,14 +329,14 @@ StartingPackage: {type: :byte, value: 10}
 Str: {type: :byte, value: 9}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: Naeressa}
-Tail: {type: :byte, value: 0}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
 TemplateResRef: {type: :resref, value: naeressa}
 WalkRate: {type: :int, value: 4}
-Wings: {type: :byte, value: 0}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 14}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
