--- a/mod/utc/siannan.utc.yml
+++ b/mod/utc/siannan.utc.yml
@@ -89,7 +89,7 @@ Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: kleidung031}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: cloth_bachelor}}
 FactionID: {type: :word, value: 2}
 FeatList: 
   type: :list
@@ -206,14 +206,14 @@ StartingPackage: {type: :byte, value: 10}
 Str: {type: :byte, value: 8}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: Siannan}
-Tail: {type: :byte, value: 0}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
 TemplateResRef: {type: :resref, value: siannan}
 WalkRate: {type: :int, value: 4}
-Wings: {type: :byte, value: 0}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 14}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
