--- a/mod/utc/constr_adakdef.utc.yml
+++ b/mod/utc/constr_adakdef.utc.yml
@@ -6,109 +6,74 @@ Appearance_Type: {type: :word, value: 6}
 ArmorPart_RFoot: {type: :byte, value: 1}
 BodyBag: {type: :byte, value: 0}
 BodyPart_Belt: {type: :byte, value: 0}
-BodyPart_LBicep: {type: :byte, value: 1}
+BodyPart_LBicep: {type: :byte, value: 0}
 BodyPart_LFArm: {type: :byte, value: 1}
 BodyPart_LFoot: {type: :byte, value: 1}
 BodyPart_LHand: {type: :byte, value: 1}
 BodyPart_LShin: {type: :byte, value: 1}
 BodyPart_LShoul: {type: :byte, value: 0}
-BodyPart_LThigh: {type: :byte, value: 1}
-BodyPart_Neck: {type: :byte, value: 1}
-BodyPart_Pelvis: {type: :byte, value: 1}
-BodyPart_RBicep: {type: :byte, value: 1}
+BodyPart_LThigh: {type: :byte, value: 0}
+BodyPart_Neck: {type: :byte, value: 0}
+BodyPart_Pelvis: {type: :byte, value: 0}
+BodyPart_RBicep: {type: :byte, value: 0}
 BodyPart_RFArm: {type: :byte, value: 1}
 BodyPart_RHand: {type: :byte, value: 1}
 BodyPart_RShin: {type: :byte, value: 1}
 BodyPart_RShoul: {type: :byte, value: 0}
-BodyPart_RThigh: {type: :byte, value: 1}
+BodyPart_RThigh: {type: :byte, value: 0}
 BodyPart_Torso: {type: :byte, value: 1}
 CRAdjust: {type: :int, value: 0}
-Cha: {type: :byte, value: 10}
-ChallengeRating: {type: :float, value: 1.0}
+Cha: {type: :byte, value: 3}
+ChallengeRating: {type: :float, value: 9.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTC/ClassList
     __struct_id: 2
-    Class: {type: :int, value: 10}
-    ClassLevel: {type: :short, value: 1}
-    MemorizedList0: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
-        __struct_id: 3
-        Spell: {type: :word, value: 37}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
-        __struct_id: 3
-        Spell: {type: :word, value: 144}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
-        __struct_id: 3
-        Spell: {type: :word, value: 100}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-    MemorizedList1: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
-        __struct_id: 3
-        Spell: {type: :word, value: 102}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
-        __struct_id: 3
-        Spell: {type: :word, value: 174}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-Color_Hair: {type: :byte, value: 23}
+    Class: {type: :int, value: 13}
+    ClassLevel: {type: :short, value: 6}
+Color_Hair: {type: :byte, value: 1}
 Color_Skin: {type: :byte, value: 1}
 Color_Tattoo1: {type: :byte, value: 1}
 Color_Tattoo2: {type: :byte, value: 1}
-Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 14}
-Conversation: {type: :resref, value: dhorn}
-CurrentHitPoints: {type: :short, value: 4}
+Comment: {type: :cexostr, value: Als "tiny" gewertet in Bezug auf Bonus TP}
+Con: {type: :byte, value: 10}
+Conversation: {type: :resref, value: ""}
+CurrentHitPoints: {type: :short, value: 60}
 DecayTime: {type: :dword, value: 5000}
-Deity: {type: :cexostr, value: Gond}
+Deity: {type: :cexostr, value: ""}
 Description: 
   type: :cexolocstr
-  value: 
-    0: "Ein grossgewachsener junger Mann von vielleicht zwanzig Jahren.\n\
-      Das sonnengebr\xE4unte Gesicht wird von kurzgeschorenen schwarzen haaren eingerahmt, und braune Augen blicken aufmerksam daraus hervor.\n\n\
-      Man sieht ihm wohl an dass er zuweilen auch k\xF6rperliche Arbeit verrichtet. Manch einer mag ihn als Dhorn Houxler erkennen, den Sohn des Schmiedes."
-Dex: {type: :byte, value: 12}
-Disarmable: {type: :byte, value: 1}
+  value: {}
+
+Dex: {type: :byte, value: 14}
+Disarmable: {type: :byte, value: 0}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: cloth_bachelor}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 1, EquippedRes: {type: :resref, value: helm_construct}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: armor_construct}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 32, EquippedRes: {type: :resref, value: ebs_eska}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 131072, EquippedRes: {type: :resref, value: skin_arcanedef}}
+FactionID: {type: :word, value: 4}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 258}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 945}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 384}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 51}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 303}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 172}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 40}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 10}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 2}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 32}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 44}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 45}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Dhorn
-Gender: {type: :byte, value: 0}
+    0: Animierter Verteidiger
+Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
-HitPoints: {type: :short, value: 4}
-Int: {type: :byte, value: 16}
+HitPoints: {type: :short, value: 60}
+Int: {type: :byte, value: 10}
 Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
@@ -118,42 +83,24 @@ ItemList:
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTC/ItemList
     __struct_id: 0
-    InventoryRes: {type: :resref, value: nw_it_mpotion001}
+    InventoryRes: {type: :resref, value: glamdring002}
     Repos_PosX: {type: :word, value: 0}
-    Repos_Posy: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
-    __struct_id: 1
-    InventoryRes: {type: :resref, value: nw_it_sparscr102}
-    Repos_PosX: {type: :word, value: 1}
-    Repos_Posy: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
-    __struct_id: 2
-    InventoryRes: {type: :resref, value: nw_it_sparscr108}
-    Repos_PosX: {type: :word, value: 2}
-    Repos_Posy: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
-    __struct_id: 3
-    InventoryRes: {type: :resref, value: nw_wswdg001}
-    Repos_PosX: {type: :word, value: 3}
     Repos_Posy: {type: :word, value: 0}
 LastName: 
   type: :cexolocstr
-  value: 
-    0: Houxler
-LawfulChaotic: {type: :byte, value: 100}
+  value: {}
+
+LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 6}
-NaturalAC: {type: :byte, value: 0}
+MaxHitPoints: {type: :short, value: 66}
+NaturalAC: {type: :byte, value: 4}
 NoPermDeath: {type: :byte, value: 1}
-PaletteID: {type: :byte, value: 44}
+PaletteID: {type: :byte, value: 20}
 PerceptionRange: {type: :byte, value: 11}
 Phenotype: {type: :int, value: 0}
 Plot: {type: :byte, value: 0}
-PortraitId: {type: :word, value: 823}
-Race: {type: :byte, value: 6}
+PortraitId: {type: :word, value: 146}
+Race: {type: :byte, value: 10}
 ScriptAttacked: {type: :resref, value: x2_def_attacked}
 ScriptDamaged: {type: :resref, value: x2_def_ondamage}
 ScriptDeath: {type: :resref, value: x2_def_ondeath}
@@ -164,20 +111,16 @@ ScriptHeartbeat: {type: :resref, value: x2_def_heartbeat}
 ScriptOnBlocked: {type: :resref, value: x2_def_onblocked}
 ScriptOnNotice: {type: :resref, value: x2_def_percept}
 ScriptRested: {type: :resref, value: x2_def_rested}
-ScriptSpawn: {type: :resref, value: nw_c2_default9}
+ScriptSpawn: {type: :resref, value: x2_def_spawn}
 ScriptSpellAt: {type: :resref, value: x2_def_spellcast}
 ScriptUserDefine: {type: :resref, value: x2_def_userdef}
 SkillList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 9}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 9}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -186,34 +129,38 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-SoundSetFile: {type: :word, value: 131}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+SoundSetFile: {type: :word, value: 49}
 SpecAbilityList: 
   type: :list
   value: []
 
-StartingPackage: {type: :byte, value: 10}
-Str: {type: :byte, value: 14}
+StartingPackage: {type: :byte, value: 75}
+Str: {type: :byte, value: 18}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: Dhorn}
+Tag: {type: :cexostr, value: constr_adakdef}
 Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: dhorn}
-WalkRate: {type: :int, value: 4}
+TemplateResRef: {type: :resref, value: constr_adakdef}
+WalkRate: {type: :int, value: 7}
 Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 10}
 fortbonus: {type: :short, value: 0}
