--- a/mod/uti/ebs_eska.uti.yml
+++ b/mod/uti/ebs_eska.uti.yml
@@ -16,8 +16,8 @@ DescIdentified:
       Wird der Schild aktiviert, k\xFCndigt sich dies durch ein leises doch h\xF6rbares knistern an."
 Description: 
   type: :cexolocstr
-  value: 
-    4: ""
+  value: {}
+
 Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
