--- a/mod/area/adak_eg.git.yml
+++ b/mod/area/adak_eg.git.yml
@@ -8119,10 +8119,10 @@ Placeable List:
       value: 
         0: "Auf dem Schild steht sorgf\xE4ltig geschrieben:\n\n\
           Objekt: Lantanischer Dampfmotor Mark II\n\
-          Fundort: Ich habe ihn gebaut, verdammt\n\
-          Status: Intakt, was sonst ?\n\n\
-          Anmerkung an die Standartisierungsabteilung: Ich hasse dieses Formular.\n\n\
-          Dieses ausserordentliche St\xFCck Ingenieurskunst ist ein Mark II Dampfmotor mit 40 GS (Gnomenst\xE4rken) was der ungef\xE4hren Leistung eines Drachen entspricht. Speziell isolierte Leitungen f\xFChren den Dampf zum Motor der ihn dann mithilfe des Drucks in Kraft umwandelt."
+          Fundort: Ich habe ihn gebaut, verdammt!\n\
+          Status: Intakt, was sonst?\n\n\
+          Anmerkung an die Standardisierungsabteilung: Ich hasse dieses Formular.\n\n\
+          Dieses ausserordentliche St\xFCck Ingenieurskunst ist ein Mark II Dampfmotor mit 40 GS (Gnomenst\xE4rken) was der ungef\xE4ren Leistung eines Drachen entspricht. Speziell isolierte Leitungen f\xFChren den Dampf zum Motor, der ihn dann Mithilfe des Drucks in Kraft umwandelt."
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
