Add Wizard Hats model/hak
http://nwvault.ign.com/View.php?view=Hakpaks.Detail&id=7705

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -61,6 +61,7 @@ Mod_HakList:
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_2da}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_icon}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_cep2c}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: wizard_hats}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: anthravfx}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: anthvfxfirework}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: primweapons}}
