hak/tlk: minor makefile updates

--- a/hak/client_2da/Makefile
+++ b/hak/client_2da/Makefile
@@ -41,5 +41,5 @@ $(TARGET): $(twoda) $(chg)
 install: path $(TARGET)
 	@cp -v $(TARGET) $(NWNHOME)/hak/
 
-publish:
+publish: $(TARGET)
 	rsync -Pzva --chmod=go+r $(TARGET) silbermarken@miyeritar:rsync/nwn/hak/
