--- a/mod/uti/mag_gren.uti.yml
+++ b/mod/uti/mag_gren.uti.yml
@@ -9,8 +9,8 @@ Cost: {type: :dword, value: 500}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    0: "Ein spezieller Stein, bekannt daf\xFCr, genau einen Zauber inne halten zu k\xF6nnen, und zu rufen, sobald der Stein gebrochen wird - unter Scholaren humorvoll bekannt als die 'magische Granate'."
 Description: 
   type: :cexolocstr
   value: 
@@ -20,7 +20,7 @@ LocalizedName:
   type: :cexolocstr
   value: 
     0: Magische Granate
-ModelPart1: {type: :byte, value: 3}
+ModelPart1: {type: :byte, value: 5}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 0}
 PropertiesList: 
@@ -36,7 +36,7 @@ PropertiesList:
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 15}
     Subtype: {type: :word, value: 554}
-StackSize: {type: :word, value: 1}
+StackSize: {type: :word, value: 10}
 Stolen: {type: :byte, value: 0}
 Tag: {type: :cexostr, value: mag_gren}
 TemplateResRef: {type: :resref, value: mag_gren}
