--- a/mod/utc/Makefile
+++ b/mod/utc/Makefile
@@ -1,1 +1,6 @@
-../Makefile.resource
+include ../Makefile.resource
+
+all: $(res) creaturepalcus.itp
+
+creaturepalcus.itp: $(res)
+	../mkpal racialtypes Race UTC *.utc.yml > ../itp/creaturepalcus.itp
