--- a/mod/mod/Makefile
+++ b/mod/mod/Makefile
@@ -1,1 +1,6 @@
-../Makefile.resource
+include ../Makefile.resource
+
+.PHONY: module.ifo
+module.ifo: module.ifo.yml
+	nwn-gff $(EXPORT_FILTERS) -ly -i $< -kg -o $@
+	update-ifo.pl ../area/\*.are
