ADAK: add missing area scripts

--- a/mod/area/adak_nexus.are.yml
+++ b/mod/area/adak_nexus.are.yml
@@ -30,10 +30,10 @@ Name:
   value: 
     0: An der Akademie - Nexus
 NoRest: {type: :byte, value: 0}
-OnEnter: {type: :resref, value: ""}
-OnExit: {type: :resref, value: ""}
-OnHeartbeat: {type: :resref, value: ""}
-OnUserDefined: {type: :resref, value: ""}
+OnEnter: {type: :resref, value: sr_enter_inside}
+OnExit: {type: :resref, value: _area_leave}
+OnHeartbeat: {type: :resref, value: _area_hb}
+OnUserDefined: {type: :resref, value: _area_udef}
 PlayerVsPlayer: {type: :byte, value: 3}
 ResRef: {type: :resref, value: adak_nexus}
 ShadowOpacity: {type: :byte, value: 50}
