--- a/mod/uti/iron_flask.uti.yml
+++ b/mod/uti/iron_flask.uti.yml
@@ -1,44 +1,44 @@
---- !nwn-lib.elv.es,2008-12/struct
+--- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTI
 __struct_id: 4294967295
 AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 79}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 3}
+Cost: {type: :dword, value: 270000}
 Cursed: {type: :byte, value: 0}
-DescIdentified:
+DescIdentified: 
   type: :cexolocstr
   value: {}
 
-Description:
+Description: 
   type: :cexolocstr
-  value:
+  value: 
     4: |
       Eine Flasche aus einem Metall, gestaerkt von Riemen und Baendern, und einem Verschluss, der von Baendern gehalten wird.
       Die Eiserne Flasche ist ein maechtiges magisches Instrument, mit dem beliebige Kreaturen eingesperrt werden koennen.
       (Willens-Rettungswurf gegen 19, Falle)
-
+      
       Es kann immer nur eine Kreatur in der Flasche verweilen; eine gefangene Kreatur benoetigt weder Luft noch Zeit, und
       erlebt nichts dessen, was waehrend ihrer Gefangenschaft geschieht.
       Falls der Rettungswurf gelingt, ist sich die Zielkreatur des Versuches bewusst. Bei Fehlschlag wird sie sich den Ereignissen
       nicht bewusst sein (aber rasch Schluesse ziehen).
-
+      
       Eine eingesperrte Kreatur kann wieder freigelassen werden, und untersteht dann (mit einem erneuten Willens-Rettungswurf)
       dem, der sie freilaesst, fuer eine Stunde.
 
 Identified: {type: :byte, value: 1}
-LocalizedName:
+LocalizedName: 
   type: :cexolocstr
-  value:
+  value: 
     4: Eiserne Flasche
 ModelPart1: {type: :byte, value: 19}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 0}
-PropertiesList:
+PropertiesList: 
   type: :list
-  value:
-  - !nwn-lib.elv.es,2008-12/struct
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTI/PropertiesList
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -47,7 +47,17 @@ PropertiesList:
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 15}
-    Subtype: {type: :word, value: 329}
+    Subtype: {type: :word, value: 557}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: UTI/PropertiesList
+    __struct_id: 0
+    ChanceAppear: {type: :byte, value: 100}
+    CostTable: {type: :byte, value: 3}
+    CostValue: {type: :word, value: 13}
+    Param1: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 0}
+    PropertyName: {type: :word, value: 15}
+    Subtype: {type: :word, value: 556}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
 Tag: {type: :cexostr, value: iron_flask}
