ITP: update + recalc CR

--- a/mod/itp/itempalcus.itp.yml
+++ b/mod/itp/itempalcus.itp.yml
@@ -635,36 +635,6 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
-            RESREF: {type: :resref, value: cloth_bachelor}
-            STRREF: {type: :dword, value: 12919}
-          - !nwn-lib.elv.es,2008-12/struct 
-            __data_type: ITP/MAIN/LIST/LIST
-            __struct_id: 0
-            RESREF: {type: :resref, value: cloth_grandtutor}
-            STRREF: {type: :dword, value: 12919}
-          - !nwn-lib.elv.es,2008-12/struct 
-            __data_type: ITP/MAIN/LIST/LIST
-            __struct_id: 0
-            RESREF: {type: :resref, value: cloth_greenhorn}
-            STRREF: {type: :dword, value: 12919}
-          - !nwn-lib.elv.es,2008-12/struct 
-            __data_type: ITP/MAIN/LIST/LIST
-            __struct_id: 0
-            RESREF: {type: :resref, value: cloth_headmaster}
-            STRREF: {type: :dword, value: 12919}
-          - !nwn-lib.elv.es,2008-12/struct 
-            __data_type: ITP/MAIN/LIST/LIST
-            __struct_id: 0
-            RESREF: {type: :resref, value: cloth_novice}
-            STRREF: {type: :dword, value: 12919}
-          - !nwn-lib.elv.es,2008-12/struct 
-            __data_type: ITP/MAIN/LIST/LIST
-            __struct_id: 0
-            RESREF: {type: :resref, value: cloth_tutor}
-            STRREF: {type: :dword, value: 12919}
-          - !nwn-lib.elv.es,2008-12/struct 
-            __data_type: ITP/MAIN/LIST/LIST
-            __struct_id: 0
             NAME: {type: :cexostr, value: Priesergewand des Labelas Enoreth}
             RESREF: {type: :resref, value: priestergewand16}
           - !nwn-lib.elv.es,2008-12/struct 
@@ -780,13 +750,43 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
+            NAME: {type: :cexostr, value: Robe der Akademieleitung}
+            RESREF: {type: :resref, value: cloth_headmaster}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
             NAME: {type: :cexostr, value: Robe der Zentarim}
             RESREF: {type: :resref, value: zentarim_robe}
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
+            NAME: {type: :cexostr, value: "Robe des Anw\xE4rters"}
+            RESREF: {type: :resref, value: cloth_greenhorn}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: Robe des Bakkalaureus}
+            RESREF: {type: :resref, value: cloth_bachelor}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Robe des Gro\xDFtutors"}
+            RESREF: {type: :resref, value: cloth_grandtutor}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: Robe des Novizen}
+            RESREF: {type: :resref, value: cloth_novice}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
             NAME: {type: :cexostr, value: Robe des Silbermagiers}
             RESREF: {type: :resref, value: rk0_nsc_sl_mage}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: Robe des Tutors}
+            RESREF: {type: :resref, value: cloth_tutor}
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
@@ -1153,11 +1153,6 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
-            RESREF: {type: :resref, value: armor_construct}
-            STRREF: {type: :dword, value: 181}
-          - !nwn-lib.elv.es,2008-12/struct 
-            __data_type: ITP/MAIN/LIST/LIST
-            __struct_id: 0
             RESREF: {type: :resref, value: c_ritterruestung}
             STRREF: {type: :dword, value: 181}
           - !nwn-lib.elv.es,2008-12/struct 
@@ -1290,6 +1285,11 @@ MAIN:
             __struct_id: 0
             NAME: {type: :cexostr, value: "R\xFCstung des Finsteren Streiters"}
             RESREF: {type: :resref, value: zhent_ruestung}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "R\xFCstung des Konstrukts"}
+            RESREF: {type: :resref, value: armor_construct}
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
@@ -7184,6 +7184,11 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
+            NAME: {type: :cexostr, value: Seelenstein}
+            RESREF: {type: :resref, value: soulstone}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
             NAME: {type: :cexostr, value: Topaz}
             RESREF: {type: :resref, value: gem054}
         STRREF: {type: :dword, value: 6812}
@@ -7736,6 +7741,11 @@ MAIN:
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
+                NAME: {type: :cexostr, value: Ring der Erweiterten Unsichtbarkeit}
+                RESREF: {type: :resref, value: ring_einvis}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
                 NAME: {type: :cexostr, value: Ring der ewigen Freundschaft}
                 RESREF: {type: :resref, value: ring_swarm}
               - !nwn-lib.elv.es,2008-12/struct 
@@ -7788,6 +7798,11 @@ MAIN:
                 __struct_id: 0
                 NAME: {type: :cexostr, value: Ring des geistigen Friedens}
                 RESREF: {type: :resref, value: ring_spellfail}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
+                NAME: {type: :cexostr, value: Ring des Schattenlaufes}
+                RESREF: {type: :resref, value: ring_dinvis}
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
@@ -8190,6 +8205,31 @@ MAIN:
             __struct_id: 0
             NAME: {type: :cexostr, value: Runenstein}
             RESREF: {type: :resref, value: runenstein002}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: Runenstein eines Bakkalaureus}
+            RESREF: {type: :resref, value: rune_bakkalaureu}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Runenstein eines Gro\xDFtutoren"}
+            RESREF: {type: :resref, value: rune_grandtutor}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: Runenstein eines Novizen}
+            RESREF: {type: :resref, value: rune_novice}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: Runenstein eines Ratsmitglieds}
+            RESREF: {type: :resref, value: rune_councel}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            NAME: {type: :cexostr, value: Runenstein eines Tutoren}
+            RESREF: {type: :resref, value: rune_tutor}
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
@@ -9918,6 +9958,21 @@ MAIN:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: ITP/MAIN/LIST
         __struct_id: 0
+        NAME: {type: :cexostr, value: Magische Granate}
+        RESREF: {type: :resref, value: mag_gren}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: ITP/MAIN/LIST
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Pod}
+        RESREF: {type: :resref, value: bugpod}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: ITP/MAIN/LIST
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Pod}
+        RESREF: {type: :resref, value: bugpod9}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: ITP/MAIN/LIST
+        __struct_id: 0
         NAME: {type: :cexostr, value: Portables Loch}
         RESREF: {type: :resref, value: portable_hole}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -9925,6 +9980,11 @@ MAIN:
         __struct_id: 0
         NAME: {type: :cexostr, value: Runenbeutel}
         RESREF: {type: :resref, value: sum_cardbag001}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: ITP/MAIN/LIST
+        __struct_id: 0
+        NAME: {type: :cexostr, value: "Stinkendes Gew\xFCrz"}
+        RESREF: {type: :resref, value: bugpodp}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: ITP/MAIN/LIST
         __struct_id: 0
@@ -11643,6 +11703,11 @@ MAIN:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: ITP/MAIN/LIST
         __struct_id: 0
+        NAME: {type: :cexostr, value: Bugstorm}
+        RESREF: {type: :resref, value: bugstorm}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: ITP/MAIN/LIST
+        __struct_id: 0
         NAME: {type: :cexostr, value: DMFI Encounter Ditto Widget}
         RESREF: {type: :resref, value: dmfi_en_ditto}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -13306,6 +13371,11 @@ MAIN:
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
+                NAME: {type: :cexostr, value: "Stab: Brennende H\xE4nde (5)"}
+                RESREF: {type: :resref, value: wand_bhands_5}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
                 NAME: {type: :cexostr, value: "Stab: Feuerball (10)"}
                 RESREF: {type: :resref, value: wand_fireball_10}
               - !nwn-lib.elv.es,2008-12/struct 
@@ -13338,11 +13408,6 @@ MAIN:
                 __struct_id: 0
                 RESREF: {type: :resref, value: wmgwn003}
                 STRREF: {type: :dword, value: 14186}
-              - !nwn-lib.elv.es,2008-12/struct 
-                __data_type: ITP/MAIN/LIST/LIST/LIST
-                __struct_id: 0
-                NAME: {type: :cexostr, value: Wand of Missiles}
-                RESREF: {type: :resref, value: wand_bhands_5}
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
