--- a/mod/itp/creaturepalcus.itp.yml
+++ b/mod/itp/creaturepalcus.itp.yml
@@ -2440,6 +2440,27 @@ MAIN:
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
+                CR: {type: :float, value: 0.125}
+                FACTION: {type: :cexostr, value: Bugstorm}
+                NAME: {type: :cexostr, value: "K\xE4fer"}
+                RESREF: {type: :resref, value: bugstorm_bug0}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
+                CR: {type: :float, value: 0.125}
+                FACTION: {type: :cexostr, value: Bugstorm}
+                NAME: {type: :cexostr, value: "K\xE4fer"}
+                RESREF: {type: :resref, value: bugstorm_bug1}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
+                CR: {type: :float, value: 0.125}
+                FACTION: {type: :cexostr, value: Bugstorm}
+                NAME: {type: :cexostr, value: "K\xE4fer"}
+                RESREF: {type: :resref, value: bugstorm_bug2}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
                 CR: {type: :float, value: 2.0}
                 FACTION: {type: :cexostr, value: Hostile}
                 NAME: {type: :cexostr, value: "Riesenameise, Arbeiter"}
@@ -3994,7 +4015,7 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
-            CR: {type: :float, value: 6.0}
+            CR: {type: :float, value: 5.0}
             FACTION: {type: :cexostr, value: Defender}
             NAME: {type: :cexostr, value: "Albrecht, Paladin des Torm"}
             RESREF: {type: :resref, value: triade_albrecht}
